--- a/src/components/Products/Product/Product.css
+++ b/src/components/Products/Product/Product.css
@@ -2,4 +2,10 @@
   -webkit-box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
           box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
 }
+
+.product .card-img-top {
+  max-height: 25em;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
 /*# sourceMappingURL=Product.css.map */
