--- a/src/components/Products/Product/Product.scss
+++ b/src/components/Products/Product/Product.scss
@@ -1,5 +1,9 @@
 .product {
   &:hover {
-    box-shadow: 0 1rem 2rem rgba(0,0,0, .2);
+    box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
+  }
+  .card-img-top {
+    max-height: 25em;
+    object-fit: cover;
   }
 }
